syntax = "proto3";

package hero;

service HeroService {
    rpc FindOne (HeroById) returns (Hero);
    rpc PingStream (Void) returns (stream Ping);
    rpc AddMessage (Message) returns (Void);
    rpc MessageStream (Void) returns (stream Message);
}

service AuthService {
    rpc SignUp (Credentials) returns(Void);
    rpc SignIn (Credentials) returns(RefreshToken);
}


enum AuthSessionServiceError{
    INTERNAL_ERROR = 0;
}

service AuthSessionService {
    rpc SignOut (RefreshToken) returns (Void);
    rpc RefreshAccessToken (RefreshToken) returns (AccessToken);
}

message Credentials{
    string email = 1;
    string password = 2;
}

message RefreshToken{
    string token = 1;
}

message AccessToken{
    string token = 1;
}

message Ping {
    int32 id = 1;
}

message HeroById {
    int32 id = 1;
}

message Hero {
    int32 id = 1;
    string name = 2;
}

message Message {
    int32 id = 1;
    string message = 2;
}

message Void {}